--- a/src/components/UI/PageSummary.css
+++ b/src/components/UI/PageSummary.css
@@ -1,11 +1,15 @@
 .summary{
     text-align:center;
-    background-color: rgb(133, 130, 130);
-    border: 10px solid rgb(133, 130, 130);
+    background-color: rgb(118, 115, 115);
+    border: 2px solid rgb(133, 130, 130);
     color:white;
     font-size: 100px;
     font-family:'Times New Roman', Times, serif;
-    top: 50px;
-    padding-bottom: 50px;
+    top: 40px;
+    padding-bottom: 60px;
     font-weight: bold;
+    width:100%;
+    position: relative;
+    overflow:hidden;
+    border-top: 2px solid white;
 }
