--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,6 +1,8 @@
 .mainCartList{
     display: flex;
     text-align: center;
+    padding: 10px;
+    align-items: center;
 }
 .cartImage{
     width: 80px;
@@ -21,11 +23,14 @@
 }
 .title-price-quantity{
     flex: 0.5;
+    align-items: center;
 }
 .para{
     flex: 0.5;
     padding-left: 50px;
     border-bottom: 1px dashed black;
+    font-weight: bold;
+    align-items: center;
 }
 .removeButton{
     background-color: rgb(233, 75, 75);
@@ -39,4 +44,5 @@
     flex: 0.5;
     padding-left: 30px;
     border-bottom: 1px dashed black;
+    font-weight: bold;
 }
