--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 20;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color:rgba(0, 0, 0, 0.75);
   }
   
   .modal {
@@ -21,12 +21,15 @@
     z-index: 30;
     animation: slide-down 300ms ease-out forwards;
     margin-right: 500px;
+    
   }
   
   @media (min-width: 768px) {
     .modal {
       width: 40rem;
       left: calc(50% - 20rem);
+      float: right;
+      position: fixed;
     }
   }
   
@@ -34,9 +37,11 @@
     from {
       opacity: 0;
       transform: translateY(-3rem);
+      float: right;
     }
     to {
       opacity: 1;
       transform: translateY(0);
+      float: right;
     }
   }
