--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,7 +3,10 @@
     text-align: center;
     padding: 10px;
     align-items: center;
+    transform: 'translate(-50%, -50%)';
+    position: relative;
 }
+
 .cartImage{
     width: 80px;
     height: 80px;
