T5 - Adding content to Home

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -29,7 +29,10 @@
       width: 40rem;
       left: calc(50% - 20rem);
       float: right;
-      position: fixed;
+      position:fixed;
+      margin-left: 430px;
+      top: 50px;
+      right: 0;
     }
   }
   
